--- a/notebooks/sources-draw.ipynb
+++ b/notebooks/sources-draw.ipynb
@@ -15,16 +15,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/python-2.7.6/lib/python2.7/site-packages/matplotlib-1.5.1-py2.7-linux-x86_64.egg/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline"
    ]
@@ -48,7 +39,7 @@
    "source": [
     "from numpy import array\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "#import seaborn as sns"
    ]
   },
   {
@@ -1124,7 +1115,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -1138,7 +1129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
